offlineimap (3.0.2) unstable; urgency=low

  * Fixed mailbox name recorder to use localfolder.getvisiblename() rather
    than remotefolder.getvisiblename()
  * Fixed remotepassfile option.  Closes: #153119.  Used 1-line patch from
    Tommi Virtanen.

 -- John Goerzen <jgoerzen@complete.org>  Mon, 15 Jul 2002 19:43:36 -0500

offlineimap (3.0.1) unstable; urgency=low

  * Detabified the source.
  * Added UI list to the manpage.
  * Added -o (run only once) option with patch sent in by Martijn Pieters.
  * Optimized folder/IMAP.py addmessagesflags() with new listjoin() in
    imaputil.  Now, send the server 1:5,7 instead of 1,2,3,4,5,7.
  * Made folder/Maildir.py/deletemessage() more tolerant if a message
    asked to be deleted already has been.
  * In Base.py/copymessageto(), no longer bother calling getmessage()
    unless a folder's storemessages() returns true.  This will also help
    with syncing to LocalStatus if the user deleted messages in the
    Maildir since the cachemessagelist() was called.

 -- John Goerzen <jgoerzen@complete.org>  Fri, 12 Jul 2002 07:28:24 -0500

offlineimap (3.0.0) unstable; urgency=low

  * Introduced a new graphical user interface written with Tkinter.
    It features a nice view of multi-threaded displays.
  * The TTY user interface now also displays thread names.
  * Program-wide, new threads are given descriptive names to aid in
    debugging and status messages.
  * Added new module offlineimap/ui/detect.py that is used to detect
    which user interface to select for a given session.  Its operation
    is governed by the ui config option and the -u command-line option.
  * Made IMAP folder addmessagesflags() resiliant to a server refusing
    to return a full set of new message flags.  Closes: #152587.
  * Completely rewrote documentation.  OfflineIMAP now has an
    exhaustive manpage, which is really a manual.  It is also shipped
    in plain text, HTML, PDF, and PostScript formats.
  * New command-line options: